docroot/sites/all/themes/chm_theme_kit/less/header.less
.region-admin-shortcuts {
  #block-system-user-menu {
    .menu {
      &:before {
        display: inline-block;
      }
      li {
        display: inline-block;
        padding: 0 10px;
        a {
          padding: 0;
        }
      }
    }
  }
}

#block-chm-search-chm-search {
  form {
    position: relative;
    input {
      &[type="text"] {
        display: inline-block;
        border: 1px solid #ccc;
        border-radius: 4px;
        height: 30px;
        padding: 4px 6px;
        font-size: 14px;
        line-height: 30px;
        color: #555;
        vertical-align: middle;
      }
    }
    .btn-search {
      position: absolute;
      top: 1px;
      right: 10px;
    }
  }
}

#page-header {
  display: block;
  .logo {
    display: block;
    float: left;
    margin-top: 0;
    margin-bottom: 0;
    @media all and (max-width: 559px){
      width: 100%;
      img{
        margin: 0 auto;
        display: block;
      }
    }
  }
  .navbar-brand {
    display: block;
    float: left;
    height: 124px;
    padding: 0;
    // padding-top: 50px;
    // padding-bottom: 50px;
    // height: 124px;
    line-height: 124px;
    font-size: 30px;
    color: #000000;
    font-weight: bold;
    @media all and (max-width: 559px){
      // padding-top: 25px;
      padding-bottom: 25px;
      line-height: 24px;
      height: auto;
      text-align: center;
      width: 100%;
    }
  }
  #nav-search {
    display: inline-block;
    float: right;
    margin: 47px 0 0 0;
    @media all and (max-width: @screen-sm-min) {
      display: none;
    }
  }
}

.navbar-container {
  background-color: @navbar-color;
  #navbar {
    background: none;
    border: none;
    min-height: 30px;
    margin-top: 0;
    margin-bottom: 0;
    @media all and (min-width: @screen-sm-min) {
      padding-left: 0;
      padding-right: 0;
    }
    .navbar-header {
      .navbar-toggle {
        float: left;
        border: none;
        .icon-bar {
          background-color: #ffffff;
        }
        &:hover, &:focus {
          background: none;
        }
      }
      #nav-search {
        margin-top: 9px;
        @media all and (min-width: @screen-xs-max) {
          display: none;
        }
      }
    }
    .navbar-collapse {
      border: none;
      @media all and (min-width: @screen-sm-min) {
        padding-left: 0;
        padding-right: 0;
      }
      .nav {
        li {
          @media all and (min-width: @screen-sm-min) {
            float: left;
          }
          &.active {
            background-color: #ffffff;
            a {
              color: @navbar-color;
            }
          }
          a {
            color: #ffffff;
            border: none;
          }
          &:hover {
            background-color: darken(@navbar-color, 3%);
          }
          &.open {
            >a {
              background-color: darken(@navbar-color, 3%);
              color: #ffffff;
            }
            .caret {
              border-top-color: #ffffff;
            }
          }
        }

        .dropdown {
          &:hover {
            .dropdown-menu {
              display: block;
            }
          }
          .dropdown-menu {
            margin-top: 0;
            min-width: 150px;
            border-top: none;
            border-radius: 0;
            li {
              width: 100%;
              a {
                color: #000000;
                &:hover {
                  background-color: @navbar-color;
                  color: #ffffff;
                }
              }
            }
            .active {
              a {
                background-color: @navbar-color;
                color: #ffffff;
              }
            }
          }
        }
      }
    }
  }
}


#block-locale-language-content {
  float: left;

  ul.language-switcher-locale-url:before {
    content: "\f0ac";
    font-size: 20px;
    font-family: FontAwesome;
    position:relative;
    top:2px;
    left:-7px;
    color:#ccc;
  }
  .language-switcher-locale-url {
    margin: 0 20px 0 0;
    list-style: none;
  }
  .language-switcher-locale-url li {
    display:inline-block;
    border-left: 1px solid #444;
    padding:0 .5em;
    border-left: none !important;
  }
  .language-switcher-locale-url li.active { background:#fff; }
  .language-switcher-locale-url li.active a { color:#333; }
  .language-switcher-locale-url li.first { border-left: none; }
}


#block-system-user-menu {
  float: left;

  li {
    line-height:20px;
    border-left: 1px solid #444;
    margin-left: 0;
    padding: 0 .5em;
  }
  li.first { border-left: none  }
  ul.menu:before {
    content: "\f013";
    font-size: 20px;
    font-family: FontAwesome;
    position:relative;
    top:2px;
    left:3px;
    color:#ccc;
  }
}

